fixed table auto width alignment with heading

--- a/didi.css
+++ b/didi.css
@@ -676,6 +676,7 @@
 .no-repeat,.norepeat{background-repeat: no-repeat}
 .no-backcolor{background-color:inherit}
 
+.scroll-table { table-layout: fixed}
 .scroll-table>thead,.scroll-table>tbody { float:left; width: 100% }
 .scroll-table>tbody { display: block; width: 100%;overflow-y: auto }
-.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%}
+.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%; display: table-row-group}
